--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Los-suenos-Vol-1_65999
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 65999-h/images/cover.jpg
 creator:
   author:
     agent_name: Quevedo, Francisco de
@@ -24,6 +27,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/6831
     wikipedia: http://es.wikipedia.org/wiki/Julio_Cejador_y_Frauca
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/65999#Los-suenos-Vol-1
 gutenberg_issued: '2021-08-05'
 gutenberg_type: Text
 identifiers:
